[package]
authors = ["Pierre Gimalac <pierre.gimalac@gmail.com>"]
categories = ["algorithms"]
description = "A small Rust library for automaton (DFA, NFA, Regex) manipulation."
edition = "2018"
exclude = ["tests"]
homepage = "https://github.com/pgimalac/rustomaton"
keywords = ["automaton", "dfa", "nfa", "regex"]
license = "MIT"
name = "rustomaton"
readme = "README.md"
repository = "https://github.com/pgimalac/rustomaton"
version = "0.2.1"

[dependencies]
logos = "0.12.1"

[dev-dependencies]
rand = "0.8.5"
